--- a/PersonalWebsite/assets/css/styles.css
+++ b/PersonalWebsite/assets/css/styles.css
@@ -136,8 +136,8 @@ nav ul li {
 }
 /* Navbar ends */
 
-/* Hero section */
-.hero {
+/* Profile section */
+.profile {
   display: grid;
   align-items: center;
   justify-content: center;
@@ -146,7 +146,7 @@ nav ul li {
   margin: auto;
 }
 
-.hero img {
+.profile img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -170,7 +170,7 @@ nav ul li {
   line-height: var(--line-height);
   padding: 0.3rem 0;
 }
-/* Hero section ends */
+/* Profile section ends */
 
 /* About section begins*/
 
