--- a/PersonalWebsite/assets/css/styles.css
+++ b/PersonalWebsite/assets/css/styles.css
@@ -212,7 +212,7 @@ nav ul li {
 }
 
 .projects-container {
-  display: flex;
+  display: inline;
   align-items: center;
   justify-content: center;
 }
